# Universal_Robots_ROS_Tutorials

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: pre-commit.yml  sphinx.yml
doc/: tutorial_index.rst
my_robot_cell/doc/: assemble_urdf.rst  build_moveit_config.rst  start_ur_driver.rst
my_robot_cell/my_robot_cell_control/: CMakeLists.txt  package.xml
my_robot_cell/my_robot_cell_control/config/: ros2_controllers.yaml  update_rate.yaml
my_robot_cell/my_robot_cell_control/launch/: rsp.launch.py  start_robot.launch.py
my_robot_cell/my_robot_cell_control/urdf/: my_robot_cell_control.urdf.xacro  my_robot_cell_controlled.urdf.xacro
my_robot_cell/my_robot_cell_description/: CMakeLists.txt  package.xml
my_robot_cell/my_robot_cell_description/launch/: view_robot.launch.py
my_robot_cell/my_robot_cell_description/meshes/: 171005_Motek_Monitor_L.dae  fzi_table.dae  wall.dae
my_robot_cell/my_robot_cell_description/rviz/: urdf.rviz
my_robot_cell/my_robot_cell_description/urdf/: my_robot_cell.urdf.xacro  my_robot_cell_macro.xacro
my_robot_cell/my_robot_cell_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
my_robot_cell/my_robot_cell_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_robot_cell.ros2_control.xacro  my_robot_cell.srdf  my_robot_cell.urdf.xacro  ros2_controllers.yaml
my_robot_cell/my_robot_cell_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
ur_documentation/docs/source/: conf.py  index.rst
ur_documentation/docs/source/examples/: dual_robot.rst  installation.rst  introduction.rst  toc.rst
ur_documentation/docs/source/examples/dual_robot/: introduction.rst  step_by_step.rst  toc.rst
ur_documentation/docs/source/examples/my_robot_cell/: assemble_urdf.rst  build_moveit_config.rst  start_ur_driver.rst  toc.rst
ur_example_dual_robot/: .catkin_lint  CMakeLists.txt  README.md  README.rst  package.xml
ur_example_dual_robot/etc/: alice_controllers.yaml  bob_controllers.yaml  view_robot.rviz
ur_example_dual_robot/launch/: dual_robot_startup.launch  load_dual_description.launch  view_dual_robot.launch  view_dual_robot.launch.py
ur_example_dual_robot/resources/: docker-compose.yml
ur_example_dual_robot/resources/ursim/programs_alice/: default.installation  default.variables  external_control.urp
ur_example_dual_robot/resources/ursim/programs_bob/: default.installation  default.variables  external_control.urp
ur_example_dual_robot/scripts/: docker_alice_bob.sh
ur_example_dual_robot/urdf/: dual_robot.xacro
